--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -111,6 +111,12 @@
   }
 }
 
+.placeholder {
+  height: 300vw;
+  opacity: 0.5;
+  background: linear-gradient(180deg, rgba(25,134,26,1) 0%, rgba(0,212,255,1) 100%);
+}
+
 .factory {
   transition: 0.2s opacity;
 
