--- a/pages/sormovo/index.module.css
+++ b/pages/sormovo/index.module.css
@@ -1,9 +1,4 @@
 .root {
-  width: 500vw;
+  display: flex;
   flex-shrink: 0;
-  background: linear-gradient(180deg, rgba(25,134,26,1) 0%, rgba(0,212,255,1) 100%);
-
-  @media (--l) {
-    background: linear-gradient(90deg, rgba(25,134,26,1) 0%, rgba(0,212,255,1) 100%);
-  }
 }
