--- a/components/CommonText/CommonText.module.css
+++ b/components/CommonText/CommonText.module.css
@@ -1,5 +1,9 @@
 .root {
   width: 50vw;
+  &:not(:last-child) {
+    margin-bottom: calc(var(--yr) * var(--s5));
+  }
+  padding: 1rem 2rem
 }
 
 .vrezka {
