feat: add Etna page and GunsOfWar component

--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,7 @@
 :root {
   --red_color: #dc4128;
   --sp_color: #c7ced2;
+  --grey_color: #ebebeb;
   --gr_text_color: #6a6a6a;
   --hl_color: #d63517;
   --wht_color: #fff;
