--- a/css/globals.css
+++ b/css/globals.css
@@ -14,3 +14,61 @@ a {
 * {
   box-sizing: border-box;
 }
+
+body {
+  font-family: var(--ff_sans_main);
+  font-size: calc(var(--yr) * 3.5);
+  line-height: calc(var(--yr) * 5);
+
+  @media (--s) {
+    font-size: calc(var(--yr) * 4);
+    line-height: calc(var(--yr) * 6);
+  }
+
+  @media (--l) {
+    font-size: calc(var(--yr) * 4 * var(--fs_mod));
+    line-height: calc(var(--yr) * 6 * var(--fs_mod));
+  }
+}
+
+h1 {
+  font-family: var(--ff_serif);
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.01em;
+  margin: 0 0 calc(var(--yr) * var(--s3));
+  font-size: calc(var(--yr) * 6);
+  line-height: calc(var(--yr) * 7);
+
+  @media (--s) {
+    font-size: calc(var(--yr) * 12);
+    line-height: calc(var(--yr) * 14);
+  }
+}
+
+h2 {
+  font-family: var(--ff_sans_header);
+  font-weight: normal;
+  margin: 0 0 calc(var(--yr) * var(--s3));
+  font-size: calc(var(--yr) * 6);
+  line-height: calc(var(--yr) * 7);
+
+  @media (--s) {
+    font-size: calc(var(--yr) * 10);
+    line-height: calc(var(--yr) * 11);
+  }
+
+  @media (--l) {
+    font-size: calc(var(--yr) * 10 * var(--fs_mod));
+    line-height: calc(var(--yr) * 11 * var(--fs_mod));
+  }
+}
+
+p {
+  margin: 0 0 calc(var(--yr) * var(--s3));
+  hyphens: auto;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
