--- a/components/CommonText/CommonText.module.css
+++ b/components/CommonText/CommonText.module.css
@@ -1,6 +1,7 @@
 .root {
-  width: 50vw;
-  padding: 1rem 2rem
+  padding: 0 var(--xr);
+  /* width: 50vw; */
+  /* padding: 1rem 2rem */
 }
 
 .vrezka {
