--- a/pages/sormovo/index.module.css
+++ b/pages/sormovo/index.module.css
@@ -35,3 +35,22 @@
     min-width: 200vw;
   }
 }
+
+
+.reconstruction {
+  margin-bottom: calc(var(--yr) * var(--s5));
+
+  @media (--l) {
+    margin-bottom: 0;
+    min-width: 350vw;
+  }
+}
+
+.building {
+  margin-bottom: calc(var(--yr) * var(--s5));
+
+  @media (--l) {
+    margin-bottom: 0;
+    min-width: 300vw;
+  }
+}
