Немного подчищен контент Сормово

--- a/components/Fonts.module.css
+++ b/components/Fonts.module.css
@@ -120,3 +120,11 @@
     margin-bottom: 0;
   }
 }
+
+.vrezka {
+  color: var(--hl_color);
+  font-family: var(--ff_sans_header);
+  composes: bt;
+  margin: 0 0 calc(var(--yr) * var(--s4));
+}
+
