--- a/css/globals.css
+++ b/css/globals.css
@@ -36,6 +36,14 @@ figure {
   padding: 0;
 }
 
+p {
+  margin: 0;
+
+  &:not(:last-child) {
+    margin: 0 0 calc(var(--yr) * var(--s4));
+  }
+}
+
 /* h1 {
   font-family: var(--ff_serif);
   font-weight: normal;
