--- a/components/GunsOfWar/GunsOfWar.module.css
+++ b/components/GunsOfWar/GunsOfWar.module.css
@@ -1,10 +1,13 @@
 .root {
-  width: 50vw;
-  padding: 1rem 2rem;
 }
 
 .gun {
   display: flex;
+  align-items: flex-end;
+}
+
+.img {
+  width: 5rem;
 }
 
 .title {
