--- a/components/Speech/Speech.module.css
+++ b/components/Speech/Speech.module.css
@@ -3,7 +3,8 @@
   &:not(:last-child) {
     margin-bottom: calc(var(--yr) * var(--s5));
   }
-  padding: 1rem 2rem
+
+  padding: 1rem 2rem;
 }
 
 .content {
