--- a/pages/gaz/index.module.css
+++ b/pages/gaz/index.module.css
@@ -115,3 +115,21 @@
     min-width: 500vw;
   }
 }
+
+.isALive {
+  margin-bottom: calc(var(--yr) * var(--s5));
+
+  @media (--l) {
+    margin-bottom: 0;
+    min-width: 250vw;
+  }
+}
+
+.victory {
+  margin-bottom: calc(var(--yr) * var(--s5));
+
+  @media (--l) {
+    margin-bottom: 0;
+    min-width: 200vw;
+  }
+}
