--- a/components/Legend/Legend.module.css
+++ b/components/Legend/Legend.module.css
@@ -1,8 +1,8 @@
 .content {
   padding: 1rem 2rem;
-  background-color: var(--grey_color);
+  background-color: rgb(var(--grey_color));
 }
 
 .title {
-  color: var(--hl_color);
+  color: rgb(var(--hl_color));
 }
