--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,26 +1,51 @@
-.logo {
+.place_logo {
   height: 47px;
   width: 115px;
   position: absolute;
   right: 0;
   top: 0;
-  mask-image: url("../../assets/header/images/logo-sm.svg");
-  mask-size: cover;
-  background-color: var(--red_color);
 
   @media (--s) {
-    mask-image: url("../../assets/header/images/logo-lg.svg");
-    mask-size: cover;
-    width: 64px;
-    height: 74px;
+    width: 60px;
+    height: 70px;
     bottom: 0;
     top: auto;
   }
 }
 
+.logo {
+  height: 47px;
+  width: 115px;
+  mask-image: url("../../assets/header/images/logo-sm.svg");
+  mask-size: cover;
+  background-color: rgb(var(--red_color));
+
+  @media (--s) {
+    mask-image: url("../../assets/header/images/logo-lg.svg");
+    mask-size: cover;
+    width: 60px;
+    height: 70px;
+    bottom: 0;
+    top: auto;
+  }
+}
+
+.text {
+  composes: at from "../Fonts.module.css";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  @media (--s) {
+    writing-mode: vertical-lr;
+    transform: translate(-50%, -50%) rotate(180deg);
+  }
+}
+
 .root {
-  background: var(--wht_color);
-  border-bottom: 1px solid var(--sp_color);
+  background: rgb(var(--wht_color));
+  border-bottom: 1px solid rgb(var(--sp_color));
   position: fixed;
   left: 0;
   top: 0;
@@ -30,33 +55,49 @@
 
   &.dark {
     background: none;
-    border-bottom: 1px solid color-mod(var(--wht_color) a(0.3));
+    border-bottom: 1px solid rgba(var(--wht_color), 0.3);
+
+    & .place_logo {
+      background-color: rgb(var(--red_color));
+    }
 
     & .logo {
-      background-color: var(--wht_color);
+      background-color: rgb(var(--wht_color));
+    }
+
+    & .text {
+      color: rgb(var(--wht_color));
     }
   }
 
   &.active {
-    background: var(--red_color);
+    background: rgb(var(--red_color));
+
+    & .place_logo {
+      background-color: rgb(var(--red_color));
+    }
 
     & .logo {
-      background-color: var(--wht_color);
+      background-color: rgb(var(--wht_color));
+    }
+
+    & .text {
+      color: rgb(var(--wht_color));
     }
   }
 
   @media (--s) {
-    width: 64px;
+    width: 60px;
     height: 100%;
     border-bottom: none;
-    border-right: 1px solid var(--sp_color);
+    border-right: 1px solid rgb(var(--sp_color));
 
     &.dark {
-      border-right: 1px solid color-mod(var(--wht_color) a(0.3));
+      border-right: 1px solid rgba(var(--wht_color), 0.3);
       border-bottom: none;
 
       & .burger {
-        border-bottom: 1px solid color-mod(var(--wht_color) a(0.3));
+        border-bottom: 1px solid rgba(var(--wht_color), 0.3);
       }
     }
   }
@@ -68,19 +109,19 @@
   cursor: pointer;
 
   @media (--s) {
-    width: 64px;
-    height: 128px;
-    padding: 40px 8px;
-    border-bottom: 1px solid var(--sp_color);
+    width: 60px;
+    height: 70px;
+    padding: 13px 8px;
+    border-bottom: 1px solid rgb(var(--sp_color));
   }
 
   &.active {
     & rect {
-      fill: var(--wht_color);
+      fill: rgb(var(--wht_color));
     }
 
     @media (--s) {
-      border-bottom: 1px solid color-mod(var(--wht_color) a(0.3));
+      border-bottom: 1px solid rgba(var(--wht_color), 0.3);
     }
   }
 }
@@ -91,7 +132,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: var(--red_color);
+  background: rgb(var(--red_color));
   z-index: 8;
   display: none;
 
