--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -36,6 +36,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
 
   @media (--s) {
     writing-mode: vertical-lr;
