--- a/components/Header/Burger.module.css
+++ b/components/Header/Burger.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   & rect {
     fill: #141414;
     transform-origin: center center;
@@ -27,5 +27,68 @@
 
   & :not(.close) {
     display: none;
+  }
+} */
+
+.root {
+  overflow: hidden;
+  width: calc(var(--yr) * 12);
+  height: calc(var(--yr) * 12);
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: calc(var(--yr) * 1.5);
+  transition: 150ms ease-out;
+
+  &:hover {
+    opacity: 0.75;
+
+    & > span:nth-child(1) {
+      transform: translateY(-2px);
+    }
+    & > span:nth-child(3) {
+      transform: translateY(2px);
+    }
+  }
+
+  & > span {
+    transition: 350ms cubic-bezier(0.53, -0.08, 0.2, 1.43);
+    height: calc(var(--yr) / 2);
+    width: calc(var(--yr) * 6);
+    background-color: #141414;
+
+    &:nth-child(1),
+    &:nth-child(3) {
+      transition-delay: 75ms;
+      transform-origin: top left;
+    }
+
+    &:nth-child(3) {
+      transform-origin: bottom left;
+    }
+  }
+
+  &.active > span {
+    background-color: #fff;
+    &:nth-child(2) {
+      opacity: 0;
+      visibility: hidden;
+      transform: translateX(-100%);
+    }
+
+    &:nth-child(1) {
+      transform: rotate(45deg);
+      margin-left: 6px;
+    }
+
+    &:nth-child(3) {
+      transform: rotate(-45deg);
+      margin-left: 6px;
+    }
+  }
+
+  &.dark > span {
+    background-color: #fff;
   }
 }
