--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -54,6 +54,7 @@
   width: 100%;
   height: 48px;
   z-index: 9;
+  transition: 400ms cubic-bezier(0.16, 0.77, 0.14, 1.01);
 
   &.dark {
     background: none;
@@ -113,7 +114,7 @@
   @media (--s) {
     width: 60px;
     height: 70px;
-    padding: 13px 8px;
+    padding: 11px 6px;
     border-bottom: 1px solid rgb(var(--sp_color));
   }
 
@@ -134,13 +135,55 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgb(var(--red_color));
   z-index: 8;
-  display: none;
+  background: rgb(var(--red_color));
+  transform: translateX(-100%);
+  visibility: hidden;
+  transition-property: transform;
+  transition: 600ms cubic-bezier(0.16, 0.77, 0.14, 1.01);
+
+  & li {
+    --delay: 150ms;
+    --delay-step: 50ms;
+    opacity: 0;
+    transition: 700ms cubic-bezier(0.16, 0.77, 0.14, 1.01) var(--delay);
+    transform: translateX(-50%);
+
+    &:nth-child(2) {
+      transition-delay: calc(var(--delay-step) + var(--delay));
+    }
+
+    &:nth-child(3) {
+      transition-delay: calc(var(--delay-step) * 2 + var(--delay));
+    }
+
+    &:nth-child(4) {
+      transition-delay: calc(var(--delay-step) * 3 + var(--delay));
+    }
+
+    &:nth-child(5) {
+      transition-delay: calc(var(--delay-step) * 4 + var(--delay));
+    }
+
+    &:nth-child(6) {
+      transition-delay: calc(var(--delay-step) * 5 + var(--delay));
+    }
+
+    &:nth-child(7) {
+      transition-delay: calc(var(--delay-step) * 6 + var(--delay));
+    }
+  }
 
   &.active {
-    display: block;
     overflow-y: scroll;
+    transform: translateX(0);
+    visibility: visible;
+    z-index: 8;
+
+    & li {
+      opacity: 1;
+      transform: translateX(0%);
+    }
   }
 
   /* @media (--m) {
