--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,43 +1,12 @@
-.place_logo {
-  height: 47px;
-  width: 115px;
-  position: absolute;
-  right: 0;
-  top: 0;
-
-  @media (--s) {
-    width: 60px;
-    height: 70px;
-    bottom: 0;
-    top: auto;
-  }
-}
-
-.logo {
-  height: 47px;
-  width: 115px;
-  mask-image: url("../../assets/header/images/logo-sm.svg");
-  mask-size: cover;
-  background-color: rgb(var(--red_color));
-
-  @media (--s) {
-    mask-image: url("../../assets/header/images/logo-lg.svg");
-    mask-size: cover;
-    width: 60px;
-    height: 70px;
-    bottom: 0;
-    top: auto;
-  }
-}
-
-.text {
-  composes: at from "../Fonts.module.css";
+.name {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   letter-spacing: 0.04em;
   text-transform: uppercase;
+  white-space: nowrap;
+  font-family: var(--ff_sans_header);
 
   @media (--s) {
     writing-mode: vertical-lr;
@@ -60,14 +29,6 @@
     background: none;
     border-bottom: 1px solid rgba(var(--wht_color), 0.3);
 
-    & .place_logo {
-      background-color: rgb(var(--red_color));
-    }
-
-    & .logo {
-      background-color: rgb(var(--wht_color));
-    }
-
     & .text {
       color: rgb(var(--wht_color));
     }
@@ -76,15 +37,7 @@
   &.active {
     background: rgb(var(--red_color));
 
-    & .place_logo {
-      background-color: rgb(var(--red_color));
-    }
-
-    & .logo {
-      background-color: rgb(var(--wht_color));
-    }
-
-    & .text {
+    & .name {
       color: rgb(var(--wht_color));
     }
   }
@@ -110,6 +63,7 @@
   width: 48px;
   height: 48px;
   cursor: pointer;
+  margin-left: auto;
 
   @media (--s) {
     width: 60px;
@@ -119,10 +73,6 @@
   }
 
   &.active {
-    & rect {
-      fill: rgb(var(--wht_color));
-    }
-
     @media (--s) {
       border-bottom: 1px solid rgba(var(--wht_color), 0.3);
     }
@@ -139,12 +89,12 @@
   background: rgb(var(--red_color));
   transform: translateX(-100%);
   visibility: hidden;
-  transition-property: transform;
-  transition: 600ms cubic-bezier(0.16, 0.77, 0.14, 1.01);
+  transition: transform 0.6s cubic-bezier(0.16, 0.77, 0.14, 1.01);
 
   & li {
     --delay: 150ms;
     --delay-step: 50ms;
+
     opacity: 0;
     transition: 700ms cubic-bezier(0.16, 0.77, 0.14, 1.01) var(--delay);
     transform: translateX(-50%);
@@ -185,8 +135,4 @@
       transform: translateX(0%);
     }
   }
-
-  /* @media (--m) {
-    width: calc(calc(2 / 3) * 100%);
-  } */
 }
