Header name dark color

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -29,7 +29,7 @@
     background: none;
     border-bottom: 1px solid rgba(var(--wht_color), 0.3);
 
-    & .text {
+    & .name {
       color: rgb(var(--wht_color));
     }
   }
