Partially redesign system

--- a/components/CommonImage/CommonImage.module.css
+++ b/components/CommonImage/CommonImage.module.css
@@ -1,3 +1,7 @@
 .root {
-  /* padding: 0 var(--xr); */
+  margin-bottom: calc(var(--yr) * var(--s4));
+
+  /* &:last-child {
+    margin-bottom: 0;
+  } */
 }
