--- a/components/CommonText/CommonText.module.css
+++ b/components/CommonText/CommonText.module.css
@@ -1,14 +1,8 @@
 .root {
-  /* padding: 0 var(--xr); */
+  padding: 0 var(--xr);
+  margin-bottom: calc(var(--yr) * var(--s4));
 
-  /* width: 50vw; */
-
-  /* padding: 1rem 2rem */
-}
-
-.vrezka {
-  color: rgb(var(--hl_color));
-  font-family: var(--ff_sans_header);
-  composes: bt from '../Fonts.module.css';
-  margin: 0 0 calc(var(--yr) * var(--s4));
+  @media (--s) {
+    padding: 0;
+  }
 }
