--- a/components/Header/Nav.module.css
+++ b/components/Header/Nav.module.css
@@ -60,8 +60,8 @@
 }
 
 .item {
+  display: block;
   color: rgb(var(--wht_color));
-  composes: h2 from "../Fonts.module.css";
   position: relative;
   cursor: pointer;
   text-transform: none;
@@ -70,7 +70,7 @@
   border-bottom: 1px solid rgba(var(--wht_color), 0.2);
   transition: 0.3s ease-out;
 
-  &:after {
+  &::after {
     display: block;
     content: "";
     position: absolute;
@@ -78,7 +78,7 @@
     left: 0;
     background-color: rgba(var(--wht_color));
     height: 1px;
-    width: 0px;
+    width: 0;
     transition: 0.3s ease-out;
   }
 
@@ -86,14 +86,19 @@
     /* border-bottom-color: var(--wht_color); */
     padding-left: calc(var(--yr) * 3);
 
-    &:after {
+    &::after {
       width: 100%;
     }
   }
 }
 
+.title {
+  composes: h2 from "../Fonts.module.css";
+}
+
 .desc {
-  composes: bt from "../Fonts.module.css";
+  /* composes: at from "../Fonts.module.css"; */
+  font-family: var(--ff_serif);
   color: #57150a;
   margin-top: calc(var(--yr) * var(--s2));
 }
