--- a/components/MainText/MainText.module.css
+++ b/components/MainText/MainText.module.css
@@ -7,9 +7,10 @@
 }
 
 .root {
-  /* padding: 0 var(--xr); */
+  padding: 0 var(--xr);
+  margin-bottom: calc(var(--yr) * var(--s4));
 
-  @media (--l) {
-    padding-left: 30%;
+  @media (--s) {
+    padding: 0;
   }
 }
