--- a/css/globals.css
+++ b/css/globals.css
@@ -26,18 +26,18 @@ a {
 }
 
 body {
-  font-family: var(--ff_sans_main);
-  font-size: calc(var(--yr) * 3.5);
-  line-height: calc(var(--yr) * 5);
+  font-family: var(--ff_serif);
+  font-size: calc(var(--yr) * 5);
+  line-height: calc(var(--yr) * 6);
 
   @media (--s) {
-    font-size: calc(var(--yr) * 4);
-    line-height: calc(var(--yr) * 6);
+    font-size: calc(var(--yr) * 5.5);
+    line-height: calc(var(--yr) * 7);
   }
 
   @media (--l) {
-    font-size: calc(var(--yr) * 4 * var(--fs_mod));
-    line-height: calc(var(--yr) * 6 * var(--fs_mod));
+    font-size: calc(var(--yr) * 5.5 * var(--fs_mod));
+    line-height: calc(var(--yr) * 7 * var(--fs_mod));
   }
 }
 
@@ -48,6 +48,7 @@ figure {
 
 p {
   margin: 0;
+  hyphens: auto;
 
   &:not(:last-child) {
     margin: 0 0 calc(var(--yr) * var(--s4));
