--- a/components/Intro.module.css
+++ b/components/Intro.module.css
@@ -4,15 +4,25 @@
   --t-func: cubic-bezier(0.16, 0.77, 0.14, 1.01);
 
   padding: 0 var(--xr);
+  margin: calc(var(--yr) * var(--s5) * 2) 0;
 
   @media (--s) {
-    padding: 0 calc(1 / 11 * 100%);
+    padding: 0;
+    margin: 0 0 calc(var(--yr) * var(--s5) * 2);
   }
 
   @media (--l) {
-    padding:
-      calc(10vh * var(--fs_mod) + calc(var(--yr) * var(--s5)))
-      calc(1 / 11 * 100%) 0 calc(2 / 11 * 100%);
+    display: flex;
+    margin: 0;
+  }
+}
+
+.page {
+  composes: page from './Factory/Factory.module.css';
+
+  @media (--l) {
+    align-self: center;
+    padding-top: 0;
   }
 }
 
