Partially redesign system (3 chapters in Sormovo) (#18)
* Partially redesign system

* First three chapters in Sormovo

--- a/components/MainText/MainText.module.css
+++ b/components/MainText/MainText.module.css
@@ -7,9 +7,14 @@
 }
 
 .root {
-  /* padding: 0 var(--xr); */
+  padding: 0 var(--xr);
+  margin-bottom: calc(var(--yr) * var(--s4));
+
+  @media (--s) {
+    padding: 0;
+  }
 
   @media (--l) {
-    padding-left: 30%;
+    margin-bottom: 0;
   }
 }
