--- a/components/Intro.module.css
+++ b/components/Intro.module.css
@@ -4,15 +4,25 @@
   --t-func: cubic-bezier(0.16, 0.77, 0.14, 1.01);
 
   padding: 0 var(--xr);
+  margin: calc(var(--yr) * var(--s5) * 2) 0;
 
   @media (--s) {
-    padding: 0 calc(1 / 11 * 100%);
+    padding: 0;
+    margin: 0 0 calc(var(--yr) * var(--s5) * 2);
   }
 
   @media (--l) {
-    padding:
-      calc(10vh * var(--fs_mod) + calc(var(--yr) * var(--s5)))
-      calc(1 / 11 * 100%) 0 calc(2 / 11 * 100%);
+    display: flex;
+    margin: 0;
+  }
+}
+
+.page {
+  composes: page from './Factory/Factory.module.css';
+
+  @media (--l) {
+    align-self: center;
+    padding-top: 0;
   }
 }
 
@@ -88,9 +98,21 @@
 }
 
 .item {
-  font-family: var(--ff_sans_header);
+  font-family: var(--ff_sans);
   animation: fadeInUp var(--duration) var(--t-func) calc(var(--delay) * 2) both;
   position: relative;
+  font-size: calc(var(--yr) * 3.5);
+  line-height: calc(var(--yr) * 5);
+
+  @media (--s) {
+    font-size: calc(var(--yr) * 4);
+    line-height: calc(var(--yr) * 6);
+  }
+
+  @media (--l) {
+    font-size: calc(var(--yr) * 4 * var(--fs_mod));
+    line-height: calc(var(--yr) * 6 * var(--fs_mod));
+  }
 
   &::after {
     display: block;
@@ -138,8 +160,7 @@
 }
 
 .digit {
-  font-family: var(--ff_sans_header);
-  font-weight: normal;
+  font-weight: 400;
   font-size: calc(var(--yr) * 14);
   line-height: calc(var(--yr) * 14);
   color: rgb(var(--hl_color));
