--- a/pages/gaz/index.module.css
+++ b/pages/gaz/index.module.css
@@ -7,7 +7,7 @@
   }
 }
 
-.intro {
+/* .intro {
   position: relative;
   margin-bottom: calc(var(--yr) * var(--s5));
   padding-top: calc(var(--yr) * var(--s6));
@@ -132,4 +132,4 @@
     margin-bottom: 0;
     min-width: 200vw;
   }
-}
+} */
