--- a/pages/gzhd/index.module.css
+++ b/pages/gzhd/index.module.css
@@ -7,7 +7,7 @@
   }
 }
 
-.intro {
+/* .intro {
   position: relative;
   margin-bottom: calc(var(--yr) * var(--s5));
   padding-top: calc(var(--yr) * var(--s6));
@@ -106,4 +106,4 @@
     margin-bottom: 0;
     min-width: 150vw;
   }
-}
+} */
