Add Index concept

--- a/css/variables.css
+++ b/css/variables.css
@@ -6,7 +6,7 @@
   --hl_color: 214, 53, 23;
   --wht_color: 255, 255, 255;
   --ff_serif: 'EB Garamond', serif;
-  --ff_sans: 'Oswald', sans-serif;
+  --ff_sans: 'Po Beda', sans-serif;
   --yr: 0.25rem;
   --xr: 1rem;
 
