--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,142 +1,141 @@
 .root {
+  background: gray;
   position: relative;
-  padding-top: 50vh;
-
-  & span {
-    background: red;
-    color: white;
-    margin-left: 1em;
-  }
-}
-
-.main {
-  position: fixed;
-  height: 100vh;
-  width: 100%;
-  left: 0;
-  top: 0;
-  background: #000 url(../assets/index/images/Star.jpg) no-repeat center;
-  background-size: cover;
-  z-index: -1;
-
-  @media (--s) {
-    background-image: url(../assets/index/images/StarX.jpg);
-  }
-}
-
-.introWrapper {
-  position: absolute;
-  left: 50%;
-  top: 50%;
 }
 
 .intro {
-  font-family: var(--ff_sans_header);
-  color: white;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.gradient {
-  font-size: calc(var(--yr) * 12);
-  line-height: calc(var(--yr) * 15);
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  background: -webkit-linear-gradient(#d63517, #8a1f2f);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  border-bottom: 1px solid white;
-  padding-bottom: var(--yr);
-
-  @media (min-width: 480px) {
-    font-size: calc(var(--yr) * 17);
-    line-height: calc(var(--yr) * 20);
-    padding-bottom: calc(var(--yr) * 2);
-  }
-
-  @media (--s) {
-    font-size: calc(var(--yr) * 24);
-    line-height: calc(var(--yr) * 27);
-    padding-bottom: calc(var(--yr) * 3.5);
-  }
-}
-
-.under {
-  font-size: calc(var(--yr) * 5);
-  line-height: calc(var(--yr) * 6);
-  letter-spacing: 0.22em;
-  text-transform: uppercase;
-  margin-top: var(--yr);
-  background: -webkit-linear-gradient(#fff, #cbcfd2);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-
-  @media (min-width: 480px) {
-    font-size: calc(var(--yr) * 7);
-    line-height: calc(var(--yr) * 8);
-    margin-top: calc(var(--yr) * 2);
-  }
-
-  @media (--s) {
-    font-size: calc(var(--yr) * 10);
-    line-height: calc(var(--yr) * 11);
-    margin-top: calc(var(--yr) * 3);
-  }
-}
-
-.overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
+  position: fixed;
+  background: url(../assets/index/images/Star.jpg) no-repeat center bottom;
+  background-size: cover;
+  height: 100vh;
   width: 100%;
-  height: 100%;
-  background: #000;
-  backdrop-filter: blur(10px);
+}
+
+.name {
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: var(--ff_sans);
+  font-size: calc(var(--yr) * 15);
+  line-height: calc(var(--yr) * 15);
+  text-align: center;
+
+  & span {
+    color: rgb(var(--hl_color));
+  }
+
+  @media (--s) {
+    bottom: 20%;
+    font-size: calc(var(--yr) * 25);
+    line-height: calc(var(--yr) * 25);
+    white-space: nowrap;
+  }
+}
+
+.content {
+  background: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(5px);
+
+  @media (--s) {
+    display: flex;
+  }
 }
 
 .factories {
-  min-height: 200vh;
   position: relative;
-  z-index: 1;
-  padding: 0 calc(1 / 11 * 100%) calc(var(--yr) * var(--s6));
-  opacity: 0;
+  padding: 50vh var(--xr) calc(var(--yr) * var(--s4) * 2);
 
   @media (--s) {
-    margin-left: 64px;
+    flex-shrink: 0;
+    padding: 0 0 0 50vw;
+    display: flex;
   }
 }
 
-.factory {
-  transition: 0.2s opacity;
+.items {
+  @media (--s) {
+    display: flex;
+  }
+}
+
+.g {
+  @media (--s) {
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+}
+
+.item {
+  overflow: hidden;
+  display: block;
+  margin-bottom: calc(var(--yr) * var(--s5));
 
   & a {
-    padding: calc(var(--yr) * var(--s5) / 2) 0;
-    color: #fff;
     display: block;
-    text-decoration: none;
+  }
+
+  @media (--s) {
+    width: calc(7 / 13 * 100vw);
+    margin-bottom: 0;
+    height: 35vh;
+
+    &:nth-child(2n) {
+      margin-top: auto;
+      padding-right: calc(1 / 7 * 100%);
+      align-items: start;
+
+      /* background: red; */
+    }
+
+    &:nth-child(2n + 1) {
+      margin-bottom: auto;
+      padding-left: calc(1 / 7 * 100%);
+      align-items: end;
+
+      /* background: blue; */
+    }
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
-.title {
-  composes: h1sans from "../components/Fonts.module.css";
+.dt {
+  @media (--s) {
+    padding: calc(var(--yr) * 5) calc(var(--xr) * 2);
+  }
 }
 
-.desc {
-  composes: h2 from "../components/Fonts.module.css";
-  margin-top: calc(var(--yr) * var(--s2));
-}
+.image {
+  background-color: #555;
+  position: relative;
+  padding-top: calc(2 / 3 * 100%);
 
-.selected {
-  & .factory {
-    opacity: 0.4;
+  @media (--s) {
+    padding-top: calc(1 / 1 * 100%);
 
-    &.active {
-      opacity: 1;
+    &.i54 {
+      padding-top: calc(4 / 5 * 100%);
     }
   }
 }
 
-.sep {
-  margin: calc(var(--yr) * var(--s6)) 0;
-  border-top: 1px solid color-mod(#fff a(0.3));
+.title {
+  margin-top: calc(var(--yr) * var(--s3));
+  font-family: var(--ff_sans);
+  font-size: calc(var(--yr) * 5);
+  line-height: calc(var(--yr) * 7);
+  color: rgb(var(--hl_color));
+}
+
+.desc {
+  margin-top: calc(var(--yr) * var(--s2));
+  font-weight: bold;
+  font-size: calc(var(--yr) * 6);
+  line-height: calc(var(--yr) * 8);
+
+  /* composes: bt from '../components/Fonts.module.css'; */
 }
