--- a/css/globals.css
+++ b/css/globals.css
@@ -1,20 +1,6 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    Segoe UI,
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    Fira Sans,
-    Droid Sans,
-    Helvetica Neue,
-    sans-serif;
-}
+@import 'normalize.css';
+@import './variables.css';
+@import './po_deba.css';
 
 a {
   color: inherit;
